# Windows-Optimization-Toolkit

./: .gitignore  README.md  ffmpeg_expressions.txt
Archives/Liseuse_HTML_de_txt/: fileContent.js  liseuse.bat
Archives/Toggle_WIFI/: wifi.ps1
Archives/Transcription_python/transcritption_files/: .gitignore  transcription_script.py
AutoHotkey/Shortcuts viewer/: Mute_copilot_windows.ahk  Mute_micro.ahk  OCR_trad.ahk  shortcuts.json  shortcutsViewer.ahk
AutoHotkey/Shortcuts viewer/Browser_shortcuts/: browserShortcuts.ahk
AutoHotkey/Shortcuts viewer/Personal_shortcuts/: personalShortcuts.ahk
AutoHotkey/Shortcuts viewer/TTS/: TTS.ahk  seeInstalledVoices.ahk
AutoHotkey/Shortcuts viewer/TTS/voix disponibles/: voix.ps1  (+2 more)
AutoHotkey/Shortcuts viewer/Translate_in_browser/: translateInBrowser.ahk
Liseuse_HTML_de_txt/: fileContent.js  generateFileContent.js  liseuse.html
Powershell/: CutWiFi_if_ethernet.ps1  création tache lancement script.md
Toggle_WIFI/: exe ps1.bat
Transcription_python/transcritption_files/: audio_download.bat  download_audio.py  download_video.py  export_cookies.py  transcript.bat  transcription_script.py  video_download.bat
Transcription_python/transcritption_files/video_download/: .last_update  README.md  download_video.py  video_download.bat
Transcription_python/video_audio_download/: .gitignore  README.md  video_audio_download.bat
video_audio_download/: README.md  UV_MIGRATION_GUIDE.md  download_video_audio.py  kvs_extractor.py  pyproject.toml  requirements.txt  video_audio_download.bat
video_audio_download/.kilocode/rules/: uv.md
