[project]
name = "video-audio-downloader"
version = "1.0.0"
description = "Download videos and audio from YouTube, Odysee and other platforms"
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2023.3.4",
    "pyperclip>=1.8.2",
    "beautifulsoup4>=4.11.1",
    "requests>=2.28.1",
    "tqdm>=4.64.1",
    "browser-cookie3>=0.16.2",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]